Restore core logic, fix CORS, and unify API connection for production